--- a/server/.env.example
+++ b/server/.env.example
@@ -11,3 +11,28 @@ DATABASE_URL=postgresql://user:password@host:5432/postgres
 # Production: set to your frontend origin (e.g. https://app.stockstay.com)
 # Leave unset in development for permissive CORS
 # CORS_ORIGIN=https://app.stockstay.com
+
+# App URL – frontend base URL (used in verification and password reset email links)
+# Development: APP_URL=http://localhost:5173
+# Production:  APP_URL=https://stockstay.com
+APP_URL=http://localhost:5173
+
+# ----- Real verification emails (SMTP) -----
+# Copy these into your .env and fill in your values. See server/EMAIL_SETUP.md for Gmail/SendGrid steps.
+# If unset, the verification link is only logged to the server console.
+# SMTP_HOST=smtp.gmail.com
+# SMTP_PORT=587
+# SMTP_USER=your-email@gmail.com
+# SMTP_PASS=your-app-password
+# SMTP_FROM=StockStay <your-email@gmail.com>
+
+# SendGrid example:
+# SMTP_HOST=smtp.sendgrid.net
+# SMTP_PORT=587
+# SMTP_USER=apikey
+# SMTP_PASS=SG.your-sendgrid-api-key
+# SMTP_FROM=StockStay <noreply@yourdomain.com>
+
+# Password reset email (Resend)
+# RESEND_API_KEY=re_xxxx
+# RESEND_FROM_EMAIL=Stock Stay <noreply@stockstay.com>
