--- a/server/package.json
+++ b/server/package.json
@@ -24,7 +24,9 @@
     "express-validator": "^7.2.0",
     "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^7.0.13",
     "pg": "^8.17.2",
-    "prisma": "^7.3.0"
+    "prisma": "^7.3.0",
+    "resend": "^4.0.0"
   }
 }
