Signup: email verification, province dropdown, password rules, billing

--- a/server/.env.example
+++ b/server/.env.example
@@ -36,3 +36,12 @@ APP_URL=http://localhost:5173
 # Password reset email (Resend)
 # RESEND_API_KEY=re_xxxx
 # RESEND_FROM_EMAIL=Stock Stay <noreply@stockstay.com>
+
+# ----- Stripe billing (4 prices: Starter monthly/annual, Pro monthly/annual) -----
+# See server/STRIPE_SETUP.md for setup.
+# STRIPE_SECRET_KEY=sk_live_xxxx
+# STRIPE_PRO_PRICE_ID=price_xxxx           # Pro monthly
+# STRIPE_PRO_ANNUAL_PRICE_ID=price_xxxx    # Pro annual
+# STRIPE_STARTER_PRICE_ID=price_xxxx       # Starter monthly
+# STRIPE_STARTER_ANNUAL_PRICE_ID=price_xxxx # Starter annual
+# STRIPE_WEBHOOK_SECRET=whsec_xxxx         # From Stripe CLI (dev) or Dashboard → Webhooks (prod)
