--- a/server/package.json
+++ b/server/package.json
@@ -27,6 +27,7 @@
     "nodemailer": "^7.0.13",
     "pg": "^8.17.2",
     "prisma": "^7.3.0",
-    "resend": "^4.0.0"
+    "resend": "^4.0.0",
+    "stripe": "^20.3.0"
   }
 }
