--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
   "type": "module",
   "scripts": {
     "dev": "node --watch server.js",
-    "start": "prisma migrate deploy && node server.js",
+    "start": "node server.js",
+    "migrate:deploy": "prisma migrate deploy",
     "build": "prisma generate",
     "db:migrate": "prisma migrate dev",
     "db:generate": "prisma generate",
