Plans & billing: extra user slots, landing page, Settings UI, mobile (Capacitor)

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # API Configuration (frontend)
 # Development:
 VITE_API_BASE_URL=http://localhost:3000/api
-# Production: set this when building for deploy (e.g. on Vercel)
-# VITE_API_BASE_URL=https://your-backend-url.railway.app/api
+# Production (web + mobile): create .env.production with:
+# VITE_API_BASE_URL=https://api.stockstay.com/api
