Address autocomplete: Google Places on signup, profile, client form

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,7 @@
 VITE_API_BASE_URL=http://localhost:3000/api
 # Production (web + mobile): create .env.production with:
 # VITE_API_BASE_URL=https://api.stockstay.com/api
+
+# Address autocomplete (Google Places). Optional – if unset, address fields stay manual.
+# Get a key at https://console.cloud.google.com/ and enable "Places API" and "Maps JavaScript API".
+# VITE_GOOGLE_MAPS_API_KEY=your_google_maps_api_key
